tests/cli/snapshots/cli__check__template_with_expr_warning.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
warning: "Common.submit"  [unused-key]
  --> ./messages/en.json:1:1
  = note: ("Submit")

warning: "template with expression"  [unresolved-key]
  --> ./src/app.tsx:4:23
  |
4 |       return <button>{t(`${prefix}.submit`)}</button>;
  |                       ^
  = hint: add `// glot-message-keys "Common.*.submit"` to declare expected keys


✘ 2 problems (0 errors, 2 warnings)

----- stderr -----
