tests/cli/snapshots/cli__check__translation_prop_arrow_function_component.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
✓ Checked 2 source files, 1 locale file - no issues found

----- stderr -----
