tests/cli/snapshots/cli__check__type_mismatch_multiple_locales.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - type-mismatch
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "Common.tags"  type-mismatch
  --> ./messages/en.json:3:1
  = note: expected array, got: ja (string), zh (string)
  = used: (no usages found)


✘ 1 problems (1 error, 0 warnings)

----- stderr -----
