tests/cli/snapshots/cli__check__type_mismatch_no_issue_when_types_match.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - type-mismatch
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
✓ Checked 1 source file, 2 locale files - no issues found

----- stderr -----
