tests/cli/snapshots/cli__check__type_mismatch_with_usages.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - type-mismatch
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "Page.features"  type-mismatch
  --> ./messages/en.json:3:0
  = note: (array) mismatched in: zh (string) at ./messages/zh.json:3
  = used: ./src/app.tsx:6:22


✘ 1 problems (1 error, 0 warnings)

----- stderr -----
