tests/cli/snapshots/cli__check__unresolved_method_call_result.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - unresolved
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
warning: "variable key"  [unresolved-key]
  --> ./src/app.tsx:5:18
  |
5 |     return <div>{t(obj.getKey())}</div>;
  |                  ^


✘ 1 problems (0 errors, 1 warning)

----- stderr -----
