tests/cli/snapshots/cli__check__unresolved_template_literal_static.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - unresolved
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
✓ Checked 1 source file, 1 locale file - no issues found

----- stderr -----
