tests/cli/snapshots/cli__check__unresolved_ternary_with_variables.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - unresolved
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
warning: "variable key"  [unresolved-key]
  --> ./src/app.tsx:6:18
  |
6 |     return <div>{t(condition ? key1 : key2)}</div>;
  |                  ^


✘ 1 problems (0 errors, 1 warning)

----- stderr -----
