tests/cli/snapshots/cli__check__untranslated_any_locale.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
    - untranslated
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "Common.greeting"  [untranslated]
  --> ./messages/en.json:3:1
  = note: ("Hello, welcome to our platform") identical in: th
  = used: (no usages found)


✘ 1 problems (1 error, 0 warnings)

----- stderr -----
